--- a/Estacione2/pom.xml
+++ b/Estacione2/pom.xml
@@ -2,7 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>br.edu.ifsul.cc.lpoo</groupId>
-    <artifactId>Estacione</artifactId>
+    <artifactId>Estacione2</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
     <properties>
@@ -88,4 +88,5 @@
             <scope>provided</scope>
         </dependency>
     </dependencies>
+    <name>Estacione2</name>
 </project>
